--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>COMP3111 webscraper</name>
+	<name>COMP3111HW1</name>
 	<comment></comment>
 	<projects>
 	</projects>
